# Gabriel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Editor/: CMakeLists.txt
Editor/cpp/: main.cpp
Editor/cpp/core/: editor_application.cpp
Editor/include/core/: editor_application.h
Engine/: CMakeLists.txt
Engine/CMakeTools/: CMakeLists.txt
Engine/cpp/api/: buffers.cpp  draw.cpp  image.cpp  memory_barrier.cpp  shader.cpp  uniform.cpp  viewport.cpp
Engine/cpp/control/: camera.cpp
Engine/cpp/core/: application.cpp  assimp_core.cpp  imgui_core.cpp  logger.cpp  stbi_core.cpp  time.cpp  timer.cpp  window.cpp
Engine/cpp/debugging/: light_visual.cpp
Engine/cpp/ecs/: component.cpp  component_vector.cpp  entity.cpp  scene.cpp
Engine/cpp/features/: displacement.cpp  material.cpp  transform.cpp
Engine/cpp/features/lighting/: light.cpp  spot_light.cpp
Engine/cpp/features/shadow/: shadow_direct.cpp  shadow_point.cpp
Engine/cpp/geometry/: plane.cpp  raycast.cpp  sphere.cpp
Engine/cpp/imgui/: component_window.cpp  entity_window.cpp  image_window.cpp  properties_window.cpp  screen_window.cpp  toolbar.cpp
Engine/cpp/io/: bitmap_loader.cpp  image_loader.cpp  material_loader.cpp  model_loader.cpp  readers.cpp  serialization.cpp  skeletal_loader.cpp  writers.cpp
Engine/cpp/math/: aabb.cpp  collisions.cpp  frustrum.cpp  maths.cpp  matrices.cpp
Engine/cpp/network/api/: address.cpp  socket.cpp
Engine/cpp/network/core/: network_application.cpp  network_core.cpp  network_error.cpp
Engine/cpp/network/io/: serialization.cpp
Engine/cpp/network/services/: database_service.cpp
Engine/cpp/network/tcp/: tcp_client.cpp  tcp_receiver.cpp  tcp_sender.cpp  tcp_server.cpp
Engine/cpp/network/udp/: udp_client.cpp  udp_receiver.cpp  udp_sender.cpp  udp_server.cpp
Engine/cpp/pbr/: environment.cpp  pbr.cpp
Engine/cpp/postfx/: fxaa.cpp  ssao.cpp
Engine/cpp/raytracer/: raytrace_renderer.cpp  raytrace_storage.cpp
Engine/cpp/text/: font.cpp
Engine/cpp/ui/: ui.cpp
Engine/include/: launcher.h  pch.h
Engine/include/animation/: skeletal_animation.h  skeletal_renderer.h
Engine/include/api/: buffers.h  device.h  draw.h  frame.h  image.h  memory_barrier.h  polygon_mode.h  shader.h  storage.h  uniform.h  viewport.h
Engine/include/control/: camera.h  entity_control.h
Engine/include/core/: application.h  assimp_core.h  build.h  imgui_core.h  keycodes.h  logger.h  platform_detection.h  pointers.h  stbi_core.h  time.h  timer.h  window.h
Engine/include/debugging/: debugger.h  light_visual.h  normal_visual.h  polygon_visual.h  visuals.h
Engine/include/ecs/: component.h  component_vector.h  entity.h  scene.h
Engine/include/features/: displacement.h  material.h  outline.h  screen.h  transparency.h
Engine/include/features/lighting/: direct_light.h  environment.h  light.h  light_color.h  phong_light.h  point_light.h  spot_light.h
Engine/include/features/shadow/: shadow.h  shadow_direct.h  shadow_point.h
Engine/include/geometry/: cube.h  geometry.h  plane.h  rect.h  sphere.h  triangle.h  vertex.h
Engine/include/imgui/: component_window.h  entity_window.h  gizmo.h  image_window.h  properties_window.h  screen_window.h  toolbar.h
Engine/include/io/: bitmap_loader.h  image_loader.h  material_loader.h  model_loader.h  readers.h  serialization.h  skeletal_loader.h  writers.h
Engine/include/math/: aabb.h  collisions.h  frustrum.h  maths.h  matrices.h  plane.h  raycast.h  sphere.h
Engine/include/network/: network_launcher.h
Engine/include/network/api/: address.h  socket.h
Engine/include/network/core/: network_application.h  network_codes.h  network_core.h  network_error.h  network_logger.h  network_queue.h
Engine/include/network/io/: serialization.h
Engine/include/network/services/: database_service.h
Engine/include/network/tcp/: tcp_client.h  tcp_receiver.h  tcp_sender.h  tcp_server.h
Engine/include/network/udp/: udp_client.h  udp_receiver.h  udp_sender.h  udp_server.h
Engine/include/pbr/: pbr.h
Engine/include/postfx/: bloom.h  blur.h  fxaa.h  hdr.h  ssao.h
Engine/include/raytracer/: raytrace_renderer.h  raytrace_storage.h
Engine/include/terrain/: terrain.h
Engine/include/text/: font.h  text.h
Engine/include/ui/: ui.h
Engine/shaders/: blur.frag  cubemap.vert  direct_shadow.frag  hdr_cubemap.frag  hdr_irradiance.frag  hdr_irradiance.vert  hdr_prefilter_convolution.vert  hdr_to_cubemap.frag  light_present.frag  light_present.vert  outline.frag  outline.vert  pbr.vert  pbr_material.vert  point_shadow.vert  skeletal_deferred.vert  textures.vert
Engine/shaders/bloom/: bloom_mix.frag
Engine/shaders/build_release/: core.glsl
Engine/shaders/features/lighting/: env.glsl  phong.glsl  point.glsl  spot.glsl
Engine/shaders/pbr/: core.glsl
Engine/shaders/polygon_visual/: polygon_visual.vert  text2d_visual.frag  text2d_visual.vert
Engine/shaders/postfx/: fxaa.frag
Engine/shaders/text/: text2d.vert  text3d.frag  text3d.vert
NetworkClient/: CMakeLists.txt
NetworkClient/cpp/: main.cpp  network_client_application.cpp
NetworkServer/: CMakeLists.txt
cmake_tools/: CMakeLists.txt
cmake_utils/: CMakeLists.txt
cpp/: app.cpp  assimp_core.cpp  bloom.cpp  blur.cpp  buffers.cpp  camera.cpp  collisions.cpp  commands.cpp  core.cpp  cube.cpp  debug_control.cpp  debugger.cpp  device.cpp  displacement.cpp  draw.cpp  entity.cpp  entity_control.cpp  entity_picker.cpp  environment.cpp  file_utils.cpp  font.cpp  frame.cpp  geometry.cpp  hdr.cpp  image.cpp  light.cpp  main.cpp  material.cpp  material_loader.cpp  matrices.cpp  memory_barrier.cpp  model_loader.cpp  normal_visual.cpp  outline.cpp  pbr.cpp  plane.cpp  polygon_visual.cpp  primitives.cpp  ray_cast.cpp  rect.cpp  (+21 more)
include/: app.h  assimp_core.h  bloom.h  blur.h  buffers.h  camera.h  collisions.h  commands.h  component.h  cube.h  debug_break.h  debug_control.h  debugger.h  device.h  displacement.h  draw.h  entity.h  entity_control.h  entity_picker.h  environment.h  file_utils.h  font.h  frame.h  geometry.h  hdr.h  image.h  keycodes.h  light.h  material.h  material_loader.h  matrices.h  (+34 more)
(+256 files in other folders)
